<resources>
    <string name="app_name">PiFire</string>
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_events">Events</string>
    <string name="nav_pellets">Pellets</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_info">Info</string>
    <string name="nav_recipes">Recipes</string>
    <string name="nav_changelog">Changelog</string>
    <string name="nav_logout">Switch Smoker</string>
    <string name="placeholder_none">--</string>
    <string name="my_smokers">My Smokers</string>
    <string name="items">Items</string>
    <string name="confirm">Confirm</string>
    <string name="continue_">Continue</string>
    <string name="exit">Exit</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="view_all">View All</string>
    <string name="enable">Enable</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="swipe_to_start">Swipe to start</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="reset">Reset</string>
    <string name="reboot">Reboot</string>
    <string name="restart">Restart</string>
    <string name="shutdown">Shutdown</string>
    <string name="options">Options</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="connecting">Connecting</string>
    <string name="search">Search</string>
    <string name="search_ellipsis">Search…</string>
    <string name="print">Print</string>
    <string name="share">Share</string>
    <string name="run">Run</string>
    <string name="error">Error</string>
    <string name="unknown">Unknown</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
    <string name="clear">Clear</string>
    <string name="clear_all">Clear All</string>
    <string name="unset">Not Set</string>
    <string name="try_again">Try again</string>
    <string name="go_back">Go Back</string>
    <string name="back">Back</string>
    <string name="fan">Fan</string>
    <string name="auger">Auger</string>
    <string name="igniter">Igniter</string>
    <string name="update">Update</string>
    <string name="postpone">Postpone</string>
    <string name="voice_input">Voice Input</string>
    <string name="next">Next</string>
    <string name="dismiss">Dismiss</string>
    <string name="settings">Settings</string>
    <string name="status">Status:</string>
    <string name="smoker">Smoker %1$d</string>
    <string name="install">Install</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="seconds_format">%1$s seconds</string>
    <string name="minutes_format">%1$s minutes</string>
    <string name="grams_format">%1$s grams</string>
    <string name="percent_format">%1$s %%</string>
    <string name="temp_format">%1$s %2$s</string>
    <string name="hz_format">%1$s Hz</string>
    <string name="cm_format">%1$s cm</string>
    <string name="gs_format">%1$s g/s</string>
    <string name="basic_auth">Basic Auth</string>
    <string name="extra_headers">Extra Headers</string>
    <string name="show_password">Show Password</string>
    <string name="hide_password">Hide password</string>
    <string name="invalid_url">Please enter a valid address</string>
    <string name="admin_action_completed">Action completed successfully</string>
    <string name="nav_drawer_close">Close Nav Drawer</string>
    <string name="app_theme_light">Light Theme</string>
    <string name="app_theme_dark">Dark Theme</string>
    <string name="app_theme_system">System Theme</string>
    <string name="add_extra_header">Add New Header</string>
    <string name="add_smart_profile">Add Profile</string>
    <string name="add_apprise_location">Add Location</string>
    <string name="apprise_locations_note">format://user@location/authorization</string>
    <string name="extra_headers_note">Manage custom headers. Each of the headers you add will be added to every API request</string>
    <string name="extra_headers_not_defined">No headers defined</string>
    <string name="probe_type_target">Target Temp Notifications</string>
    <string name="probe_type_high_limit">High Limit Temp Notifications</string>
    <string name="probe_type_low_limit">Low Limit Temp Notifications</string>
    <string name="dash_mode_startup">Startup</string>
    <string name="dash_mode_monitor">Monitor</string>
    <string name="dash_mode_stop">Stop</string>
    <string name="dash_mode_smoke">Smoke</string>
    <string name="dash_mode_hold">Hold</string>
    <string name="dash_mode_shutdown">Shutdown</string>
    <string name="dash_mode_prime">Prime</string>
    <string name="dash_mode_reignite">Reignite</string>
    <string name="dash_mode_recipe">Recipe</string>
    <string name="dash_mode_manual">Manual</string>
    <string name="dash_mode_start">Start</string>
    <string name="dash_mode_continue">Continue</string>
    <string name="dash_mode_next">Next</string>
    <string name="dash_state_current">Current</string>
    <string name="dash_state_eta">Eta - </string>
    <string name="dash_state_target">Target</string>
    <string name="dash_state_set_to">Set to</string>
    <string name="dash_timer_title">Timer</string>
    <string name="dash_pellets_title">Pellets</string>
    <string name="dash_remaining_title">Remaining</string>
    <string name="dash_smoke_plus">Smoke Plus</string>
    <string name="dash_pwm_control">PWM Control</string>
    <string name="dash_shutdown_temp">Shutdown Grill When Temp Achieved</string>
    <string name="dash_keep_warm_temp">Keep Warm When Temp Achieved</string>
    <string name="dash_reignite_temp">Attempt Re-ignite When Temp Achieved</string>
    <string name="dash_shutdown_timer">Shutdown Grill When Timer Expires</string>
    <string name="dash_keep_warm_timer">Keep Warm When Timer Expires</string>
    <string name="dash_prime_and_startup">Startup grill after priming</string>
    <string name="dash_recipe_info">Recipe Info</string>
    <string name="dash_recipe_mode">Mode:</string>
    <string name="dash_recipe_step">Step:</string>
    <string name="dash_recipe_status">Status:</string>
    <string name="dash_recipe_running">Running</string>
    <string name="dash_recipe_paused">Paused</string>
    <string name="dash_remaining_time">%1$s Time Remaining:</string>
    <string name="dash_lid_open_detected">Lid Open Detected</string>
    <string name="dash_lid_open_paused">PID Paused for:</string>
    <string name="dash_critical_error_title">Critical Error Detected!</string>
    <string name="dash_critical_error_description">A critical error was detected by PiFire. Check your grill and web interface for more info</string>
    <string name="dash_errors_title">Error Detected!</string>
    <string name="dash_warnings_title">Warning Detected!</string>
    <string name="dash_elapsed">Elapsed Time</string>
    <string name="dash_hold_temp_tip_title">Set Grill Temp</string>
    <string name="dash_hold_temp_tip_details">To change the Hold temperature long press on the Grill Probe or select Hold mode again</string>
    <string name="timer_resume">Resume</string>
    <string name="timer_pause">Pause</string>
    <string name="timer_stop">Stop</string>
    <string name="not_connected_cached_results">Connection to PiFire Failed - Showing cached results. Refresh to try again</string>
    <string name="control_smoke_plus_disabled">Feature is only available in Hold and Smoke modes</string>
    <string name="control_pwm_control_disabled">Feature is only available in Hold mode</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_error">No changelog items found!</string>
    <string name="trigger_lid_open">Manually Trigger Lid Open</string>
    <string name="add_server_button">Add Smoker</string>
    <string name="recipes_cook_time">Cook Time:</string>
    <string name="recipes_prep_time">Prep Time:</string>
    <string name="recipes_difficulty">Difficulty:</string>
    <string name="recipes_probes">Food Probes:</string>
    <string name="recipes_author">Author:</string>
    <string name="recipes_rating">Rating:</string>
    <string name="recipes_description">Description</string>
    <string name="recipes_steps">Program Steps</string>
    <string name="recipes_ingredients">Ingredients</string>
    <string name="recipes_instructions">Instructions</string>
    <string name="recipes_item_step">Step</string>
    <string name="recipes_item_number">#</string>
    <string name="recipes_item_qty">Quantity</string>
    <string name="recipes_item_ingredient">Ingredient</string>
    <string name="recipes_item_direction">Direction</string>
    <string name="recipes_step_mode">Mode:</string>
    <string name="recipes_step_mode_hold">%1$s @%2$d°%3$s</string>
    <string name="recipes_step_step">Step %1$d</string>
    <string name="recipes_step_startup_header">Transition to the next step after:</string>
    <string name="recipes_step_options_header">Transition to the next step after one of the following trigger(s):</string>
    <string name="recipes_step_options_startup">Startup completes successfully</string>
    <string name="recipes_step_options_primary">Primary reaches %1$d°%2$s</string>
    <string name="recipes_step_options_food">Food Probe %1$d reaches %2$d°%3$s</string>
    <string name="recipes_step_options_timer">%1$d minutes elapses</string>
    <string name="recipes_step_options_user">The user presses continue</string>
    <string name="recipes_step_notif_header">Notifications:</string>
    <string name="recipes_step_notif">\"%1$s\"</string>
    <string name="recipes_header_about">About This Recipe</string>
    <string name="recipes_delete_running">Cannot delete recipe that is currently running!</string>
    <string name="recipes_voice_input_message">Say a keyword or title to start a search</string>
    <string name="setup_terms">Terms</string>
    <string name="setup_auth">Authentication</string>
    <string name="setup_connect">Connect</string>
    <string name="setup_push">Consent</string>
    <string name="setup_finish">Finish</string>
    <string name="setup_grill_name">Grill Name</string>
    <string name="settings_note">Note:</string>
    <string name="settings_pmode_mode">P-Mode</string>
    <string name="settings_pmode_auger_on">Auger On Time</string>
    <string name="settings_pmode_auger_off">Auger Off Time</string>
    <string name="settings_smart_start_temp">Temp</string>
    <string name="settings_smart_start_startup">Startup</string>
    <string name="settings_smart_start_auger_on">AugerOn</string>
    <string name="settings_smart_start_p_mode">P-Mode</string>
    <string name="settings_onesignal_consent_1">OneSignal is used to deliver notifications from PiFire. No Personally Identifiable Information is being collected by OneSignal. Notification data sent through OneSignal\'s API will be deleted after ~30 days.</string>
    <string name="settings_onesignal_consent_2">Once you accept, this device will register with OneSignal. Consent can be revoked to prevent further communication with OneSignal.</string>
    <string name="settings_onesignal_consent_3">OneSignal.com must not be blocked (e.g. in PiHole) for device registration to succeed</string>
    <string name="settings_onesignal_declined">Status: Not Accepted</string>
    <string name="settings_onesignal_accepted">Status: Accepted</string>
    <string name="info_gpio_device">GPIO Device Info</string>
    <string name="info_gpio_device_name">Device</string>
    <string name="info_gpio_device_function">Function</string>
    <string name="info_gpio_device_pin">Pin</string>
</resources>