<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="?listPreferredItemPaddingStart"
    android:paddingEnd="?listPreferredItemPaddingEnd"
    android:paddingBottom="@dimen/medium_spacing">

    <LinearLayout
        android:id="@+id/smart_start_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            style="@style/Text14OpenSans"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/settings_smart_start_temp"
            android:textStyle="bold" />

        <TextView
            style="@style/Text14OpenSans"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/settings_smart_start_startup"
            android:textStyle="bold" />

        <TextView
            style="@style/Text14OpenSans"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/settings_smart_start_auger_on"
            android:textStyle="bold" />

        <TextView
            style="@style/Text14OpenSans"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/settings_smart_start_p_mode"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/smart_start_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/smart_start_header"
        android:layout_marginTop="5dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/smart_start_add_button"
        style="@style/MaterialButtonPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/smart_start_recycler"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/bg_ripple_primary_button"
        android:text="@string/add_smart_profile"
        app:backgroundTint="@color/dialog_positive_button_color_accent" />

</RelativeLayout>