<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/ingredients_number"
        style="@style/Text15Aller"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_spacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ingredients_quantity"
        app:layout_constraintHorizontal_weight="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/recipes_item_number" />

    <TextView
        android:id="@+id/ingredients_quantity"
        style="@style/Text15Aller"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_spacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ingredients_ingredient"
        app:layout_constraintHorizontal_weight="30"
        app:layout_constraintStart_toEndOf="@+id/ingredients_number"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/recipes_item_qty" />

    <TextView
        android:id="@+id/ingredients_ingredient"
        style="@style/Text15Aller"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_spacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="60"
        app:layout_constraintStart_toEndOf="@+id/ingredients_quantity"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/recipes_item_ingredient" />

</androidx.constraintlayout.widget.ConstraintLayout>