<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/small_spacing"
    android:paddingEnd="@dimen/small_spacing"
    android:paddingTop="20dp">

    <LinearLayout
        android:id="@+id/smart_start_header"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:id="@+id/smart_start_range"
            style="@style/Text15Aller"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_table_header_cell_left"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/settings_smart_start_range" />

        <TextView
            style="@style/Text15Aller"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_table_header_cell_middle"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/settings_smart_start_startup" />

        <TextView
            style="@style/Text15Aller"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_table_header_cell_middle"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/settings_smart_start_auger_on" />

        <TextView
            style="@style/Text15Aller"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_table_header_cell_right"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/settings_smart_start_p_mode" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/smart_start_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/smart_start_header" />

</RelativeLayout>